# Borderlands-4.Mods

./: LICENSE
bl4_item_spawner/: bl4_item_spawner.sdkmod  ~pearl_itempool.pak
bl4_item_spawner/src/: __init__.py  pyproject.toml
bl4_reward_generator/: bl4_reward_generator.sdkmod
bl4_reward_generator/src/: __init__.py  pyproject.toml
bl4_reward_generator/src/data/: merge.json
